-- 2.2 2008-02-12 --
* access.lua: fixed message type for MSG
* Some minor socket fixes
* Initial Bloom filter implementation
* Fixed 100% cpu / infinite resend bug

-- 2.1 2008-01-06 --
* Initial ADC 1.0 release